# adveil

./: .gitignore  .gitmodules  README.md  go.mod  go.sum
C/: CMakeLists.txt  main.c  main.cpp  wrapper.cpp  wrapper.h
C/SealPIR/: pir.cpp  pir_client.cpp  pir_server.cpp  pir_server.hpp
accuracy/: main  main.go  run.sh
anns/: ann.go  dataset.go  hashes.go  hashes_test.go  knn.go  knn_test.go  knn_utils.go  lsh.go  lsh_nn.go
api/: args.go
client/: client.go
cmd/api/: args.go
cmd/client/: README.md  client.go  main.go
cmd/client/scripts/: run.sh
cmd/sealpir/: sealpir_common.go  sealpir_linux.go  sealpir_macos.go  sealpir_test.go
cmd/server/: README.md  main.go  reporting.go  server.go  session.go
cmd/server/scripts/: experiment1.sh  experiment2.sh  experiment3.sh  run.sh  shuffle.sh
crypto/: curve.go  curve_test.go  dleq.go  dleq_test.go  keys.go
ec/: LICENSE  ec.go  ec_test.go  h2c.go
elgamal/: elgamal.go  elgamal_test.go  keys.go
scripts/: README.md  clicycle.sh  experiment1.sh  experiment2.sh  run_client.sh  run_server.sh  run_targeting.sh  targeting_params.sh
sealpir/: db.go  sealpir_common.go  sealpir_linux.go  sealpir_macos.go  sealpir_test.go
server/: server.go  session.go
token/: keys.go  private_token.go  public_token.go  token.go  token_test.go
